# fvwm-1

./: ChangeLog  configure.ac
default-config/: Makefile.am
fvwm/: ConfigFvwmSetup  builtins.c  events.c
libs/: defaults.h
modules/FvwmPager/: x_pager.c
